docs: creditcard endpoints
