# internal/api/docs/swagger.yaml
@@ -971,6 +971,177 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3MTk3OTExNzMsImlkIjozLCJvcmlnX2lhdCI6MTcxOTcwNDc3Mywicm9sZSI6InVzZXIifQ.c8HuyRAxgNDC4FavwQ_mv-qWOm4Ch6--1-kSQEmK4x0
         type: string
     type: object
+  creditcard_controller.CreateRequestDto:
+    properties:
+      creditcardFlagId:
+        example: 1
+        minimum: 1
+        type: integer
+      creditcardTypeId:
+        example: 1
+        minimum: 1
+        type: integer
+      expiration:
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      name:
+        example: Testing
+        type: string
+      notifyExpiration:
+        example: true
+        type: boolean
+      number:
+        example: "5574723384289379"
+        minLength: 8
+        type: string
+      priority:
+        example: 1
+        type: integer
+    required:
+    - creditcardFlagId
+    - creditcardTypeId
+    - expiration
+    - name
+    - number
+    type: object
+  creditcard_controller.CreateResponseDto:
+    properties:
+      createdAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      creditcardFlagId:
+        example: 1
+        minimum: 1
+        type: integer
+      creditcardTypeId:
+        example: 1
+        minimum: 1
+        type: integer
+      expiration:
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
+      isDeleted:
+        example: false
+        type: boolean
+      name:
+        example: Testing
+        type: string
+      notifyExpiration:
+        example: true
+        type: boolean
+      number:
+        example: "5574723384289379"
+        minLength: 8
+        type: string
+      priority:
+        example: 1
+        type: integer
+      updatedAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      userId:
+        example: 1
+        type: integer
+      uuid:
+        example: 767c1587-1ade-4e6a-a9fe-f0e07c83bda9
+        type: string
+    required:
+    - creditcardFlagId
+    - creditcardTypeId
+    - expiration
+    - name
+    - number
+    type: object
+  creditcard_controller.CreditcardFlag:
+    properties:
+      description:
+        example: VISA
+        type: string
+      id:
+        example: 2
+        type: integer
+      name:
+        example: visa
+        type: string
+      regex:
+        example: '''^4d{5}'''
+        type: string
+    type: object
+  creditcard_controller.CreditcardType:
+    properties:
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Credit
+        type: string
+    type: object
+  creditcard_controller.GetAllUserCreditcardsResponseDto:
+    properties:
+      createdAt:
+        example: "2024-01-01T00:00:00Z"
+        type: string
+      creditcardFlag:
+        $ref: '#/definitions/creditcard_controller.CreditcardFlag'
+      creditcardType:
+        $ref: '#/definitions/creditcard_controller.CreditcardType'
+      expiration:
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      name:
+        example: Testing
+        type: string
+      number:
+        example: "5574723384289379"
+        minLength: 8
+        type: string
+      userId:
+        example: 1
+        type: integer
+      uuid:
+        example: 767c1587-1ade-4e6a-a9fe-f0e07c83bda9
+        type: string
+    required:
+    - expiration
+    - name
+    - number
+    type: object
+  creditcard_controller.UpdateRequestDto:
+    properties:
+      creditcardFlagId:
+        example: 2
+        minimum: 1
+        type: integer
+      creditcardTypeId:
+        example: 2
+        minimum: 1
+        type: integer
+      expiration:
+        example: "2025-01-01T00:00:00Z"
+        type: string
+      name:
+        example: Testing Update
+        type: string
+      notifyExpiration:
+        example: true
+        type: boolean
+      number:
+        example: "6643213384289379"
+        minLength: 8
+        type: string
+      priority:
+        example: 2
+        type: integer
+    required:
+    - creditcardFlagId
+    - creditcardTypeId
+    - expiration
+    - name
+    - number
+    type: object
   exception.HttpException:
     properties:
       message:
@@ -1922,6 +2093,152 @@ paths:
       summary: Sign In
       tags:
       - Users
+  /creditcard:
+    post:
+      description: Create a Creditcard
+      parameters:
+      - description: New Creditcard
+        in: body
+        name: Creditcard
+        required: true
+        schema:
+          $ref: '#/definitions/creditcard_controller.CreateRequestDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/creditcard_controller.CreateResponseDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Create a Creditcard
+      tags:
+      - Creditcard
+  /creditcard/{uuid}:
+    delete:
+      description: Soft Delete a creditcard
+      parameters:
+      - description: Creditcard UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Soft Delete a creditcard
+      tags:
+      - Creditcard
+    put:
+      description: Update a creditcard
+      parameters:
+      - description: Creditcard UUID
+        in: path
+        name: uuid
+        required: true
+        type: string
+      - description: Update Creditcard
+        in: body
+        name: Creditcard
+        required: true
+        schema:
+          $ref: '#/definitions/creditcard_controller.UpdateRequestDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Update a creditcard
+      tags:
+      - Creditcard
+  /creditcard/user:
+    get:
+      description: Get all user creditcards
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/creditcard_controller.GetAllUserCreditcardsResponseDto'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/middleware.AuthenticationError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/middleware.RolePermissionError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/exception.HttpException'
+      summary: Get all user creditcards
+      tags:
+      - Creditcard
   /users:
     get:
       consumes:
