# internal/api/io/http/controller/creditcard_controller/creditcard_controller.go
@@ -10,7 +10,18 @@ import (
 	"github.com/wesleyfebarretos/ticket-sale/internal/api/io/http/controller"
 )
 
-// TODO: Implement swagger documentation config and examples in structs
+// GetAllUserCreditcards godoc
+//
+//	@Tags			Creditcard
+//	@Summary		Get all user creditcards
+//	@Description	Get all user creditcards
+//	@Produce		json
+//	@Success		200	{object}	[]GetAllUserCreditcardsResponseDto
+//	@Failure		500	{object}	exception.HttpException
+//	@Failure		400	{object}	exception.HttpException
+//	@Failure		403	{object}	middleware.RolePermissionError
+//	@Failure		401	{object}	middleware.AuthenticationError
+//	@Router			/creditcard/user [get]
 func GetAllUserCreditcards(c *gin.Context) {
 	user := controller.GetClaims(c)
 
@@ -42,6 +53,19 @@ func GetAllUserCreditcards(c *gin.Context) {
 	c.JSON(http.StatusOK, creditcardsResponse)
 }
 
+// CreateCreditCard godoc
+//
+//	@Tags			Creditcard
+//	@Summary		Create a Creditcard
+//	@Description	Create a Creditcard
+//	@Produce		json
+//	@Param			Creditcard	body		CreateRequestDto	true	"New Creditcard"
+//	@Success		201			{object}	CreateResponseDto
+//	@Failure		500			{object}	exception.HttpException
+//	@Failure		400			{object}	exception.HttpException
+//	@Failure		403			{object}	middleware.RolePermissionError
+//	@Failure		401			{object}	middleware.AuthenticationError
+//	@Router			/creditcard [post]
 func Create(c *gin.Context) {
 	user := controller.GetClaims(c)
 
@@ -81,6 +105,21 @@ func Create(c *gin.Context) {
 	c.JSON(http.StatusCreated, newCreditcardResponse)
 }
 
+// UpdateProduct godoc
+//
+//	@Tags			Creditcard
+//	@Summary		Update a creditcard
+//	@Description	Update a creditcard
+//	@Produce		json
+//	@Param			uuid		path		string				true	"Creditcard UUID"
+//	@Param			Creditcard	body		UpdateRequestDto	true	"Update Creditcard"
+//	@Success		200			{object}	bool
+//	@Failure		500			{object}	exception.HttpException
+//	@Failure		404			{object}	exception.HttpException
+//	@Failure		400			{object}	exception.HttpException
+//	@Failure		403			{object}	middleware.RolePermissionError
+//	@Failure		401			{object}	middleware.AuthenticationError
+//	@Router			/creditcard/{uuid} [put]
 func Update(c *gin.Context) {
 	user := controller.GetClaims(c)
 
@@ -108,6 +147,19 @@ func Update(c *gin.Context) {
 	c.JSON(http.StatusOK, true)
 }
 
+// SoftDeleteProduct godoc
+//
+//	@Tags			Creditcard
+//	@Summary		Soft Delete a creditcard
+//	@Description	Soft Delete a creditcard
+//	@Produce		json
+//	@Param			uuid	path		string	true	"Creditcard UUID"
+//	@Success		200		{object}	bool
+//	@Failure		500		{object}	exception.HttpException
+//	@Failure		400		{object}	exception.HttpException
+//	@Failure		403		{object}	middleware.RolePermissionError
+//	@Failure		401		{object}	middleware.AuthenticationError
+//	@Router			/creditcard/{uuid} [delete]
 func SoftDelete(c *gin.Context) {
 	uuid := controller.GetUuid(c)
 
